# service/api/getConversations.go
@@ -1,0 +1,53 @@
+package api
+
+import (
+	"encoding/json"
+	"net/http"
+	"strconv"
+
+	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/api/reqcontext"
+	"github.com/julienschmidt/httprouter"
+)
+
+type Avatar struct {
+	Url    string `json:"url"`
+	Mime   string `json:"mime"`
+	Width  int    `json:"width"`
+	Height int    `json:"height"`
+}
+
+type Conversation struct {
+	ConversationID string `json:"conversation_id"`
+	Name           string `json:"name"`
+	Avatar         Avatar `json:"avatar"`
+}
+
+func (rt *_router) getConversations(w http.ResponseWriter, r *http.Request, params httprouter.Params, context reqcontext.RequestContext) {
+
+	userId, err := strconv.Atoi(params.ByName("userId"))
+	if err != nil {
+		context.Logger.WithError(err).Error("Error converting userId to int")
+		http.Error(w, http.StatusText(http.StatusBadRequest), http.StatusBadRequest)
+		return
+	}
+	if !rt.db.IDExists(userId) {
+		context.Logger.WithError(err).Error("User does not exist")
+		http.Error(w, http.StatusText(http.StatusNotFound), http.StatusNotFound)
+		return
+	}
+
+	convs, err := rt.db.GetConversations(userId)
+	if err != nil {
+		context.Logger.WithError(err).Error("Error getting conversations")
+		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
+		return
+	}
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	err = json.NewEncoder(w).Encode(convs)
+	if err != nil {
+		context.Logger.WithError(err).Error("error encoding conversations")
+		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
+		return
+	}
+}
